--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@ header{
 
 section{
     padding: 20px;
-    background-image: url('../images/people.jpg');
+    background-image: url('../images/Loja.jpeg');
     background-size: cover;
     overflow: hidden;
 
